<resources>
    <string name="app_name">jeeyoungbus</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="change_ticket_price">Change the price of each ticket</string>
    <string name="single_journey_ticket">Single Journey Ticket</string>
    <string name="day_ticket">Day Ticket</string>
    <string name="week_ticket">Week Ticket</string>
    <string name="save">S A V E</string>
    <string name="change_ticket_price_1">CHANGE THE</string>
    <string name="change_ticket_price_2">PRICE</string>
    <string name="change_ticket_price_3">OF EACH TICKET</string>
    <string name="change">C H A N G E</string>
    <string name="price_single_journey_ticket">1.10</string>
    <string name="price_day_ticket">2.50</string>
    <string name="price_week_ticket">12</string>
    <string name="sell_tickets_1">SELL TICKETS</string>
    <string name="sell_tickets_2">USING</string>
    <string name="sell_tickets_3">YAVIN PAY</string>
    <string name="default_quantity">0</string>
    <string name="quantity">Quantity :</string>
    <string name="sell">S E L L</string>
    <string name="check_history_1">CHECK YOUR</string>
    <string name="check_history_2">SALES HISTORY</string>
    <string name="gty">Qty</string>
    <string name="sum">SUM :</string>
    <string name="yavin_payment">YAVIN PAYMENT</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="ok">OK</string>
</resources>