<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_payment_inset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDialogTitle"
                style="@style/Text.Roboto.Bold.18sp.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yavin_payment" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/ivCloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_x" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDialogMessage"
            style="@style/Text.Roboto.Normal.14sp.Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDialogCancel"
                style="@style/Text.Roboto.Normal.14sp.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tvDialogConfirm"
                style="@style/Text.Roboto.Normal.14sp.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/confirm" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>