<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logo_3d" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/Text.Roboto.Bold.18sp.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/change_ticket_price_1" />
                <TextView
                    style="@style/Text.Roboto.Bold.18sp.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/change_ticket_price_2" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_long_arrow_right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/dotted_line_horizontal"
                android:layerType="software" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="24dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_sale" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Roboto.Normal.16sp.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single_journey_ticket" />

                    <TextView
                        style="@style/Text.Roboto.Normal.10sp.Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="hi" />

                </LinearLayout>
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dotted_line_horizontal"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_service" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.Roboto.Normal.16sp.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_ticket" />

                <TextView
                    style="@style/Text.Roboto.Normal.10sp.Gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="hi" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dotted_line_horizontal"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_delivery" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSector1Title"
                    style="@style/Text.Roboto.Normal.16sp.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week_ticket" />

                <TextView
                    android:id="@+id/tvSector1List"
                    style="@style/Text.Roboto.Normal.10sp.Gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="hi" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dotted_line_horizontal"
            android:layerType="software" />

        <Button
            style="@style/button_black"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:text="@string/save"/>
    </LinearLayout>
</layout>