<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_sale_sign" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Roboto.Bold.18sp.Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sell_tickets_1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Text.Roboto.Bold.18sp.Gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/sell_tickets_2" />

                        <TextView
                            style="@style/Text.Roboto.Bold.20sp.Blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/sell_tickets_3" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_long_arrow_right" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/dotted_line_horizontal"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_sale_blue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text.Roboto.Normal.16sp.Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/single_journey_ticket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_single_journey_ticket_price"
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="€" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/Text.Roboto.Normal.18sp.Black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity" />

                            <androidx.appcompat.widget.AppCompatEditText
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/et_bg"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:inputType="number"
                                android:padding="15dp"
                                android:text="@string/default_quantity"
                                android:textAlignment="center"
                                android:textCursorDrawable="@drawable/cursor_blue" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/dotted_line_horizontal"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_service_blue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Text.Roboto.Normal.16sp.Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_ticket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_day_tickey_price"
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="€" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/Text.Roboto.Normal.18sp.Black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity" />

                            <androidx.appcompat.widget.AppCompatEditText
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/et_bg"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:inputType="number"
                                android:padding="15dp"
                                android:text="@string/default_quantity"
                                android:textAlignment="center"
                                android:textCursorDrawable="@drawable/cursor_blue" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/dotted_line_horizontal"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_delivery_blue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvSector1Title"
                            style="@style/Text.Roboto.Normal.16sp.Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/week_ticket" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_week_ticket_price"
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView

                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="€" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/Text.Roboto.Normal.18sp.Black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity" />

                            <androidx.appcompat.widget.AppCompatEditText
                                style="@style/Text.Roboto.Bold.26sp.Blue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="10dp"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/et_bg"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:inputType="number"
                                android:padding="15dp"
                                android:text="@string/default_quantity"
                                android:textAlignment="center"
                                android:textCursorDrawable="@drawable/cursor_blue" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/dotted_line_horizontal"
                    android:layerType="software" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Button
                style="@style/button_black"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sell"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</layout>